Update to Twitter OSS 24.8.0-SNAPSHOT and add CLAUDE.md
- Update release version to 24.8.0-SNAPSHOT for util, finagle, scrooge, twitter-server
- Add CLAUDE.md with codebase documentation for Claude Code
- Fix missing info import in EmbeddedThriftServer
- Simplify StatsReceiver scope calls to use single scope() with multiple args
- All 1,390 tests passing with Java 21 and Scala 2.13.18